firebase init fix, implement routes, and implement active link transition.

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -5,5 +5,14 @@
 
 html,
 body {
-	@apply h-full overflow-hidden;
+  @apply h-full overflow-hidden;
+}
+
+:root {
+  view-transition-name: none;
+}
+
+li[aria-current='page'] {
+  @apply variant-filled-primary rounded-[10px];
+  view-transition-name: indicator;
 }
