implement modals, popovers and tabs structure

--- a/src/app.postcss
+++ b/src/app.postcss
@@ -16,3 +16,7 @@ li[aria-current='page'] {
   @apply variant-filled-primary rounded-[10px];
   view-transition-name: indicator;
 }
+
+.btn {
+  @apply font-semibold;
+}
