--- a/src/app.postcss
+++ b/src/app.postcss
@@ -38,3 +38,15 @@ li[aria-current='page'] {
 div[aria-current='step'] {
   view-transition-name: active;
 }
+
+.hover-underline-animation {
+  @apply relative inline-block;
+}
+
+.hover-underline-animation::after {
+  @apply bg-primary-500 content-[""] absolute w-full transform scale-x-0 h-[2px] bottom-0 left-0 origin-bottom-right transition-transform duration-300 ease-out;
+}
+
+.hover-underline-animation:hover::after {
+  @apply scale-x-100 origin-bottom-left;
+}
